--- a/ecommerce-next/components/product/ProductCard/ProductCard.module.css
+++ b/ecommerce-next/components/product/ProductCard/ProductCard.module.css
@@ -1,5 +1,17 @@
 .root {
-    @apply relative;
+    @apply relative max-h-full;
+
+    max-height: 100% !important;
+
+    &:hover {
+        & .productBg:before {
+            transform: scale(1.25);
+        }
+
+        & .productImage {
+            transform: scale(1.15);
+        }
+    }
 
     &:nth-child(6n + 1) .productBg {
         @apply bg-violet;
@@ -18,9 +30,19 @@
     }
 }
 
+,.productImage{
+    @apply transition-transform duration-500 block;
+}
+
 .productBg {
     @apply absolute inset-0 z-0;
     background-color: #212529;
+
+    &:before {
+        @apply transition-transform duration-500 block w-full h-full bg-repeat-space;
+        content: "";
+        background-image: url("/product-pattern-bg.svg")
+    }
 }
 
 
@@ -38,12 +60,12 @@
     line-height: 2.2em;
 
     & span {
-        @apply py-4 px-6;
+        @apply py-4 px-6 bg-primary;
         box-decoration-break: clone;
     }
 }
 
 .productPrice {
-    @apply pb-4 pt-2 px-6 font-semibold text-sm;
+    @apply pb-4 pt-2 px-6 font-semibold text-sm bg-primary;
     letter-spacing: 0.4px;
 }
