--- a/ecommerce-next/components/ui/Hero/Hero.module.css
+++ b/ecommerce-next/components/ui/Hero/Hero.module.css
@@ -1,13 +1,15 @@
 .root {
-  @apply grid grid-cols-1 py-32;
+  /* @apply grid grid-cols-1 py-32; */
+  @apply flex flex-col py-32 justify-center;
 
   @screen md {
-    @apply grid-cols-2;
+    /* @apply grid-cols-2; */
+    @apply flex-row;
   }
 }
 
 .headline {
-  @apply text-4xl leading-10 font-extrabold text-white sm:text-5xl sm:leading-none sm:tracking-tight lg:text-6xl;
+  @apply flex-1 max-w-xl text-4xl leading-10 font-extrabold text-white sm:text-5xl sm:leading-none sm:tracking-tight lg:text-6xl;
 }
 
 .description {
